<resources>
    <string name="app_name">GiochiRiunitiKotlin</string>
    <string name="inserire">Inserisci una lettera</string>
    <string name="indovina">Prova</string>
    <string name="punteggio">Punteggio: </string>
    <string name="reset">Reset</string>
    <string name="go">Continua</string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="cz">Congratulazioni!</string>
    <string name="wn">ha vinto!</string>
    <string name="peccato">Peccato...</string>
    <string name="no_win">Nessuno ha vinto!</string>
    <string name="goBack">Torna indietro</string>
    <string name="tris">Tris</string>
    <string name="c1x1">c1x1</string>
    <string name="c1x2">c1x2</string>
    <string name="c1x3">c1x3</string>
    <string name="c1x4">c1x4</string>
    <string name="c2x1">c2x1</string>
    <string name="c2x2">c2x2</string>
    <string name="c2x3">c2x3</string>
    <string name="c2x4">c2x4</string>
    <string name="c3x1">c3x1</string>
    <string name="c3x2">c3x2</string>
    <string name="c3x3">c3x3</string>
    <string name="c3x4">c3x4</string>
    <string name="c4x1">c4x1</string>
    <string name="c4x2">c4x2</string>
    <string name="c4x3">c4x3</string>
    <string name="c4x4">c4x4</string>
</resources>
