<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principale_Puzzle15">


    <Button
        android:id="@+id/reloadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Reload"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />


    <TextView
        android:id="@+id/countShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/c1x1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c1x1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c1x2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c1x2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c1x3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c1x3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c1x4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c1x4"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/c2x1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c2x1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c2x2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c2x2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c2x3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c2x3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c2x4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c2x4"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/c3x1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c3x1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c3x2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c3x2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c3x3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c3x3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c3x4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c3x4"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/c4x1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c4x1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c4x2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c4x2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c4x3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c4x3"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c4x4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_margin="0dp"
                android:text="@string/c4x4"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>